[gd_scene load_steps=32 format=2]

[ext_resource path="res://Characters/Player/Assets/Sprite/Flambo.png" type="Texture" id=1]
[ext_resource path="res://Characters/Player/Assets/Animations/Idle_Left.anim" type="Animation" id=2]
[ext_resource path="res://Characters/Player/Assets/Animations/Move_Right.anim" type="Animation" id=3]
[ext_resource path="res://Characters/Player/Assets/Animations/Move_Left.anim" type="Animation" id=4]
[ext_resource path="res://Characters/Player/Assets/Animations/Idle_Right.anim" type="Animation" id=5]
[ext_resource path="res://Characters/Player/Script/Player.gd" type="Script" id=6]
[ext_resource path="res://Characters/Player/Script/Machine State/MachineStates.gd" type="Script" id=7]
[ext_resource path="res://Characters/Player/Script/Machine State/Idle.gd" type="Script" id=8]
[ext_resource path="res://Characters/Player/Script/Machine State/Move.gd" type="Script" id=9]
[ext_resource path="res://Characters/Player/Script/Machine State/Fall.gd" type="Script" id=10]
[ext_resource path="res://Characters/Player/Script/Machine State/Jump.gd" type="Script" id=11]
[ext_resource path="res://Characters/Player/Script/Machine State/Attack.gd" type="Script" id=12]
[ext_resource path="res://Characters/Player/Assets/Sprite/Atlas/Prot.jpg" type="Texture" id=13]
[ext_resource path="res://Characters/Player/Assets/Particles/Smoke/Smoke.tscn" type="PackedScene" id=14]
[ext_resource path="res://Characters/Player/Script/Machine State/AttackJump.gd" type="Script" id=15]
[ext_resource path="res://Characters/Player/Script/Machine State/SpecialFlame.gd" type="Script" id=16]
[ext_resource path="res://Characters/Player/Script/Machine State/SpecialCatapult.gd" type="Script" id=17]

[sub_resource type="CircleShape2D" id=1]
radius = 5.96637

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 3229, 642, 290, 309 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.35617, 13.3401 )

[sub_resource type="Animation" id=12]
resource_name = "Attack_1_Left"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PositionPlayer/AreaAttack/CollisionAttack:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.29 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpritePlayer:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 39, 38, 37 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpritePlayer/SpriteAuxiliar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.29, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpritePlayer/SpriteAuxiliar:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 36 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpritePlayer/SpriteAuxiliar:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -32, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Attack_1_Right"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PositionPlayer/AreaAttack/CollisionAttack:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.29 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpritePlayer:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpritePlayer/SpriteAuxiliar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.29, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpritePlayer/SpriteAuxiliar:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 35 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpritePlayer/SpriteAuxiliar:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Attack_2_Left"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PositionPlayer/AreaAttack/CollisionAttack:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.29 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpritePlayer:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 52, 51, 50 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpritePlayer/SpriteAuxiliar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.29, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpritePlayer/SpriteAuxiliar:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 49 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpritePlayer/SpriteAuxiliar:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -32, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Attack_2_Right"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PositionPlayer/AreaAttack/CollisionAttack:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.29 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpritePlayer:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpritePlayer/SpriteAuxiliar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.29, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpritePlayer/SpriteAuxiliar:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 43 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpritePlayer/SpriteAuxiliar:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Fall_Left"
length = 0.1
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePlayer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 29, 28, 29 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Fall_Right"
length = 0.1
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePlayer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 26 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Jump_Left"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePlayer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.02, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 31, 30 ]
}

[sub_resource type="Animation" id=9]
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePlayer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.02, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 24, 25 ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePlayer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=14]
resource_name = "Special_Flame_Left"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PositionPlayer/AreaAttack/CollisionAttack:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.29 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpritePlayer:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 52, 51, 48 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Special_Flame_Right"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PositionPlayer/AreaAttack/CollisionAttack:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.29 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpritePlayer:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 44 ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="PositionPlayer" type="Position2D" parent="."]

[node name="AreaAttack" type="Area2D" parent="PositionPlayer"]
position = Vector2( 15.3464, 12.6134 )

[node name="CollisionAttack" type="CollisionShape2D" parent="PositionPlayer/AreaAttack"]
position = Vector2( 6.25845, -2.38496 )
shape = SubResource( 1 )
disabled = true

[node name="Smoke" parent="PositionPlayer" instance=ExtResource( 14 )]
position = Vector2( -2.77528, -8.91309 )

[node name="PositionFlame" type="Position2D" parent="PositionPlayer"]
position = Vector2( 16.4308, 10.217 )

[node name="PositionCatapult" type="Position2D" parent="PositionPlayer"]
position = Vector2( -2.00452, -7.79536 )

[node name="SpritePlayer" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 10
hframes = 8
frame = 48

[node name="SpriteAuxiliar" type="Sprite" parent="SpritePlayer"]
position = Vector2( -32, 0 )
texture = ExtResource( 1 )
vframes = 10
hframes = 8
frame = 36

[node name="SpriteProto" type="Sprite" parent="."]
visible = false
position = Vector2( 0.479465, 1.71941 )
rotation = -1.5708
scale = Vector2( 0.139113, 0.120267 )
texture = SubResource( 2 )

[node name="CollisionPlayer" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 9.94929 )
shape = SubResource( 3 )

[node name="PlattformDetector" type="RayCast2D" parent="."]
position = Vector2( 0, 23.2953 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 129.6, -17.3561 )
current = true
zoom = Vector2( 0.75, 0.75 )

[node name="LabelState" type="Label" parent="."]
margin_left = -19.5288
margin_top = -37.1658
margin_right = 20.4712
margin_bottom = -23.1658
text = "Null"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack_1_Left = SubResource( 12 )
anims/Attack_1_Right = SubResource( 4 )
anims/Attack_2_Left = SubResource( 13 )
anims/Attack_2_Right = SubResource( 5 )
anims/Fall_Left = SubResource( 6 )
anims/Fall_Right = SubResource( 7 )
anims/Idle_Left = ExtResource( 2 )
anims/Idle_Right = ExtResource( 5 )
anims/Jump_Left = SubResource( 8 )
anims/Jump_Right = SubResource( 9 )
anims/Move_Left = ExtResource( 4 )
anims/Move_Right = ExtResource( 3 )
anims/SpecialFlame = SubResource( 10 )
anims/Special_Flame_Left = SubResource( 14 )
anims/Special_Flame_Right = SubResource( 11 )

[node name="MachineStates" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Idle" type="Node" parent="MachineStates"]
script = ExtResource( 8 )

[node name="Move" type="Node" parent="MachineStates"]
script = ExtResource( 9 )

[node name="Jump" type="Node" parent="MachineStates"]
script = ExtResource( 11 )

[node name="Fall" type="Node" parent="MachineStates"]
script = ExtResource( 10 )

[node name="Attack" type="Node" parent="MachineStates"]
script = ExtResource( 12 )

[node name="AttackJump" type="Node" parent="MachineStates"]
script = ExtResource( 15 )

[node name="SpecialFlame" type="Node" parent="MachineStates"]
script = ExtResource( 16 )

[node name="SpecialCatapult" type="Node" parent="MachineStates"]
script = ExtResource( 17 )
[connection signal="animation_finished" from="AnimationPlayer" to="MachineStates/SpecialFlame" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="MachineStates/AttackJump" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="MachineStates/Attack" method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished_state" from="MachineStates/Idle" to="MachineStates" method="change_state"]
[connection signal="finished_state" from="MachineStates/Move" to="MachineStates" method="change_state"]
[connection signal="finished_state" from="MachineStates/Jump" to="MachineStates" method="change_state"]
[connection signal="finished_state" from="MachineStates/Fall" to="MachineStates" method="change_state"]
[connection signal="finished_state" from="MachineStates/Attack" to="MachineStates" method="change_state"]
[connection signal="finished_state" from="MachineStates/AttackJump" to="MachineStates" method="change_state"]
[connection signal="finished_state" from="MachineStates/SpecialFlame" to="MachineStates" method="change_state"]
[connection signal="finished_state" from="MachineStates/SpecialCatapult" to="MachineStates" method="change_state"]
